--- a/easy/index.html
+++ b/easy/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="player">
-
+        <div class="card-background">
+            <img src="files/favo-de-mel-branco-fundo_51543-116.jpg">
+        </div>
         <h4><i class="material-icons">equalizer</i>Hood</h4>
         <div class="card">
             <div class="card-image">
@@ -18,7 +20,10 @@
                 </a>
             </div>
             <div class="card-content">
-                <h5>Title</h5>
+                <div class="titulo-music">
+                    <i class="material-icons" id="music_note">music_note</i>
+                    <h5 id="title">Title</h5>
+                </div>
                 <p class="artist">Artist</p>
                 <div class="row valign-wrapper">
                     <div class="col s2" id="current-duration">00:00</div>
@@ -28,15 +33,18 @@
                     <div class="col s2" id="total-duration">00:00</div>
                     <div>
                         <a href="#">
-                            <i class="material-icons" id="vol">volume_up</i>
+                            <i class="material-icons" id="mute">volume_up</i>
                         </a>
                     </div>
                     <div class="col s3 range-field valign-wrapper">
-                        <input type="range" min="0" max="100" step="1" id="vol-control">
+                        <input type="range" min="0" max="100" step="1" id="vol-control" value="100">
                     </div>
                 </div>
             </div>
-            <button id="mudar">Mudar Música</button>
+            <div class="botao">
+                <button id="mudar"><i class="material-icons" id="mic">mic</i>  Mudar Música</button>
+            </div>
+            
         </div>
     </div>
     <script src="index.js" type ="module"></script>
